--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,9 +1,19 @@
 find_package(Doxygen)
+#set(MD_SOURCES 01_intro.md) 
+set(IMAGE_PATH "images")
+set(DEST_IMAGE_PATH "${CMAKE_BINARY_DIR}/${IMAGE_PATH}")
+set(PROJECT_LOGO "${CMAKE_CURRENT_SOURCE_DIR}/images/npn.png")
+set(PLANTUML_JAR_PATH "/usr/share/java/plantuml.jar")
 if(DOXYGEN_FOUND)
     configure_file(
         "doxygen.conf.in"
         "doxygen.conf"
         @ONLY
+    )
+    configure_file(
+        "header.tex"
+        "header.tex"
+        COPYONLY
     )
     add_custom_target(
         doc
@@ -11,6 +21,8 @@ if(DOXYGEN_FOUND)
         "${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf"
         OUTPUT  "${CMAKE_CURRENT_BINARY_DIR}/html/index.html"
         WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+        DEPENDS "${MD_SOURCES}"
+        DEPENDS "${PROJECT_LOGO}"
         COMMENT "Generating code documentation..." VERBATIM
     )
     add_custom_target(
